--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -3,14 +3,14 @@
 // Define defaults for each variable.
 
 $base-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
-$base-font-size:   16px !default;
+$base-font-size:   24px !default;
 $base-font-weight: 400 !default;
 $small-font-size:  $base-font-size * 0.875 !default;
 $base-line-height: 1.5 !default;
 
-$spacing-unit:     30px !default;
+$spacing-unit:     60px !default;
 
-$text-color:       #111 !default;
+$text-color:       #fdfdfd !default;
 $background-color: #fdfdfd !default;
 $brand-color:      #2a7ae2 !default;
 
