--- a/_layouts/galleryPage.html
+++ b/_layouts/galleryPage.html
@@ -1,3 +1,9 @@
+---
+layout: default
+support: [jquery, gallery]
+---
+
+
 <!DOCTYPE html>
 <html lang="{{ page.lang | default: site.lang | default: "en" }}">
 
