--- a/_layouts/galleryPage.html
+++ b/_layouts/galleryPage.html
@@ -2,26 +2,15 @@
 layout: default
 support: [jquery, gallery]
 ---
+<article class="post">
 
+  <header class="post-header">
+    <h1 class="post-title">{{ page.title | escape }}</h1>
+  </header>
 
-<!DOCTYPE html>
-<html lang="{{ page.lang | default: site.lang | default: "en" }}">
+  <div class="post-content">
+    {{% include image-gallery.html folder="/_includes/_projectGallery" %}}
+            
+  </div>
 
-  {%- include head.html -%}
-
-  <body>
-
-    {%- include header.html -%}
-
-    <main class="page-content" aria-label="Content">
-      <div class="wrapper">
-        {{ content }}
-        {% include image-gallery.html folder="/_includes/_projectGallery" %}
-      </div>
-    </main>
-
-    {%- include footer.html -%}
-
-  </body>
-
-</html>
+</article>
