--- a/_layouts/galleryPage.html
+++ b/_layouts/galleryPage.html
@@ -8,7 +8,7 @@ layout: default
   </header>
 
   <div class="post-content">
-    {% include image-gallery.html folder="/uploads/album" %}
+    {% include image-gallery.html folder="/_includes/_projectGallery" %}
     {{ content }}
   </div>
 
