--- a/_layouts/galleryPageDefault.html
+++ b/_layouts/galleryPageDefault.html
@@ -7,7 +7,7 @@
 
     {%- include header.html -%}
 
-    {% include image-gallery.html folder="/uploads/album" %}
+    {% include image-gallery.html folder="/_projectGallery" %}
 
     <main class="page-content" aria-label="Content">
       <div class="wrapper">
