--- a/_layouts/galleryPageDefault.html
+++ b/_layouts/galleryPageDefault.html
@@ -13,6 +13,9 @@
       <div class="wrapper">
         {{ content }}
       </div>
+      <p>
+        foobar
+      </p>
     </main>
 
     {%- include footer.html -%}
